[project]
name = "rtui-console"
version = "0.1.0"
description = "ROS2 console viewer with TUI interface using Textual"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pyyaml>=6.0.2",
    "textual>=0.41.0",
]

[project.scripts]
rtui-console = "rtui_console.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]
